--- a/docs/source/_static/custom.css
+++ b/docs/source/_static/custom.css
@@ -1,4 +1,4 @@
-table, th, td {
-    word-wrap: break-word;
+/* Rule for having the table(s) wrap correctly on screen */
+.wy-table-responsive table td, .wy-table-responsive table th {
     white-space: normal;
 }
